force-app/main/default/objects/Medical_Treatment__c/Medical_Treatment__c.object-meta.xml
<CustomObject>
    <label>Medical Treatment</label>
    <nameField>
        <label>Medical Treatment Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>