force-app/main/default/objects/Medical_Treatment__c/fields/Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed__c</fullName>
    <formula>(Total_Billed__c - Insurance_Paid__c - Client_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>