force-app/main/default/objects/Medical_Treatment__c/fields/Bills_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Bills_Received_Date__c</fullName>
    <label>Bills Received Date</label>
    <type>Date</type>
</CustomField>