force-app/main/default/objects/Medical_Treatment__c/fields/Bills_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Bills_Requested_Date__c</fullName>
    <label>Bills Requested Date</label>
    <type>Date</type>
</CustomField>