force-app/main/default/objects/Medical_Treatment__c/fields/Bills_Status__c.field-meta.xml
<CustomField>
    <fullName>Bills_Status__c</fullName>
    <label>Bills Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
            </value>
            <value>
                <fullName>Authorization Sent</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Insufficient — Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>