force-app/main/default/objects/Medical_Treatment__c/fields/Client_Paid__c.field-meta.xml
<CustomField>
    <fullName>Client_Paid__c</fullName>
    <label>Client Paid</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>