force-app/main/default/objects/Medical_Treatment__c/fields/Diagnosis_Description__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Description__c</fullName>
    <label>Diagnosis Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>