force-app/main/default/objects/Medical_Treatment__c/fields/Insurance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Paid__c</fullName>
    <label>Insurance Paid</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>