force-app/main/default/objects/Medical_Treatment__c/fields/Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lien_Amount__c</fullName>
    <label>Lien Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>