force-app/main/default/objects/Medical_Treatment__c/fields/Lien_Savings__c.field-meta.xml
<CustomField>
    <fullName>Lien_Savings__c</fullName>
    <formula>(Lien_Amount__c - Negotiated_Lien__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>