force-app/main/default/objects/Medical_Treatment__c/fields/Negotiated_Lien__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Lien__c</fullName>
    <label>Negotiated Lien</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>