force-app/main/default/objects/Medical_Treatment__c/fields/Primary_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis_Code__c</fullName>
    <label>Primary Diagnosis Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>