force-app/main/default/objects/Medical_Treatment__c/fields/Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Treatments</relationshipLabel>
    <relationshipName>Medical_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>