force-app/main/default/objects/Medical_Treatment__c/fields/Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Provider_Address__c</fullName>
    <label>Provider Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>