force-app/main/default/objects/Medical_Treatment__c/fields/Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Provider_Phone__c</fullName>
    <label>Provider Phone</label>
    <type>Phone</type>
</CustomField>