force-app/main/default/objects/Medical_Treatment__c/fields/Records_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Records_Received_Date__c</fullName>
    <label>Records Received Date</label>
    <type>Date</type>
</CustomField>