force-app/main/default/objects/Medical_Treatment__c/fields/Records_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Records_Requested_Date__c</fullName>
    <label>Records Requested Date</label>
    <type>Date</type>
</CustomField>