force-app/main/default/objects/Medical_Treatment__c/fields/Records_Status__c.field-meta.xml
<CustomField>
    <fullName>Records_Status__c</fullName>
    <label>Records Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
            </value>
            <value>
                <fullName>Authorization Sent</fullName>
            </value>
            <value>
                <fullName>Pending; Received</fullName>
            </value>
            <value>
                <fullName>Insufficient — Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>