force-app/main/default/objects/Medical_Treatment__c/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <label>Total Billed</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>